--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-/* global styles */
+/* global style  */
 * {
   box-sizing: border-box;
   padding: 0;
@@ -8,7 +8,6 @@
 body {
   background-color: #d9dcd6;
 }
-
 /* header styles */
 header {
   padding: 20px;
@@ -52,8 +51,7 @@ a {
 p {
   font-size: 16px;
 }
-
-/* content/section styles */
+/* content styles */
 .hero {
   height: 800px;
   width: 100%;
@@ -62,7 +60,7 @@ p {
   background-size: cover;
   background-position: center;
 }
-/* util classes for img */
+/* img styles */
 .float-left {
   float: left;
   margin-right: 25px;
@@ -73,36 +71,48 @@ p {
   margin-left: 25px;
 }
 /* main content style */
-content,
-.benefits {
-  display: block;
+main {
+  width: 75%;
+  display: inline-block;
+  margin-left: 20px;
 }
-/* benefits bar style */
+/* benefit styles */
+.benefits {
+  margin-right: 20px;
+  padding: 20px;
+  clear: both;
+  float: right;
+  width: 20%;
+  height: 100%;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  background-color: #2589bd;
+}
+
 .benefit-lead,
-.benefit-brand,
-.benefit-cost {
+.benefit-cost,
+.benefit-brand {
   margin-bottom: 32px;
   color: #ffffff;
 }
 
 .benefit-lead h3,
-.benefit-brand h3,
-.benefit-cost h3 {
+.benefit-cost h3,
+.benefit-brand h3 {
   margin-bottom: 10px;
   text-align: center;
 }
 
 .benefit-lead img,
-.benefit-brand img,
-.benefit-cost img {
+.benefit-cost img,
+.benefit-brand img {
   display: block;
   margin: 10px auto;
   max-width: 150px;
 }
 
 .search-engine-optimization,
-.online-reputation-management,
-.social-media-marketing {
+.social-media-marketing,
+.online-reputation-management {
   margin-bottom: 20px;
   padding: 50px;
   height: 300px;
@@ -110,17 +120,21 @@ content,
   background-color: #0072bb;
   color: #ffffff;
 }
-/* img style */
+
 .search-engine-optimization img,
-.online-reputation-management img,
 .social-media-marketing img,
-.search-engine-optimization h2,
-.online-reputation-management h2,
-.social-media-marketing h2 {
+.online-reputation-management img {
   max-height: 200px;
 }
 
-/* footer styles */
+.search-engine-optimization h2,
+.social-media-marketing h2,
+.online-reputation-management h2 {
+  margin-bottom: 20px;
+  font-size: 36px;
+}
+
+/* footer style */
 footer {
   padding: 30px;
   clear: both;
